--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<sonar.host.url>http://localhost:9000</sonar.host.url>
 		<sonar.java.binaries>target/classes</sonar.java.binaries>
 		<sonar.token>${env.SONAR_TOKEN}</sonar.token>
+		<sonar.coverage.exclusions>**/ShapeApiApplication.java,**/SwaggerResponseCodes.java</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -135,6 +136,11 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.10</version>
+				<configuration>
+					<excludes>
+						<exclude>com/shape/shape_api/ShapeApiApplication.class</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
