--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,13 +7,14 @@ spring:
     password: ${DB_PASSWORD:password}
     driver-class-name: org.h2.Driver
   datasource-platform: org.hibernate.dialect.H2Dialect
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
 springdoc:
   api-docs:
     path: /v3/api-docs
