Ignore TODOs in Sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
 # exclude these classes from test code coverage
 sonar.coverage.exclusions=**/ShapeApiApplication.java,**/SwaggerResponseCodes.java
+sonar.issue.ignore.multicriteria.e1.ruleKey=squid:S1135
